<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>

    <groupId>com.whitewoodcity</groupId>
    <artifactId>xtrike</artifactId>
    <version>1.2</version>

    <name>Xtrike</name>

    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <maven.compiler.release>18</maven.compiler.release>
        <javafx.version>19</javafx.version>
        <fxgl.version>17+dev-SNAPSHOT</fxgl.version>
        <compiler.plugin.version>3.10.1</compiler.plugin.version>
        <javafx.plugin.version>0.0.8</javafx.plugin.version><!--need environment variable enabled-->
        <gluonfx.plugin.version>1.0.12</gluonfx.plugin.version>
        <attach.version>4.0.9</attach.version>
        <main.class>com.whitewoodcity.xtrike/com.whitewoodcity.xtrike.Main</main.class>
        <jar.finalName>${project.name}</jar.finalName>
    </properties>

    <dependencies>
        <dependency>
            <groupId>com.github.almasb</groupId>
            <artifactId>fxgl</artifactId>
            <version>${fxgl.version}</version>
        </dependency>

        <!--        <dependency>-->
        <!--            <groupId>org.openjfx</groupId>-->
        <!--            <artifactId>javafx-controls</artifactId>-->
        <!--            <version>${javafx.version}</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.openjfx</groupId>-->
        <!--            <artifactId>javafx-fxml</artifactId>-->
        <!--            <version>${javafx.version}</version>-->
        <!--        </dependency>-->
        <!--        <dependency>-->
        <!--            <groupId>org.openjfx</groupId>-->
        <!--            <artifactId>javafx-media</artifactId>-->
        <!--            <version>${javafx.version}</version>-->
        <!--        </dependency>-->
    </dependencies>

    <build>
        <plugins>
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>${compiler.plugin.version}</version>
            </plugin>

            <plugin>
                <groupId>org.openjfx</groupId>
                <artifactId>javafx-maven-plugin</artifactId>
                <version>${javafx.plugin.version}</version>
                <configuration>
                    <stripDebug>true</stripDebug>
                    <compress>2</compress>
                    <noHeaderFiles>true</noHeaderFiles>
                    <noManPages>true</noManPages>
                    <!--                    <launcher>Xtrike</launcher>-->
                    <!--                    bin/java -XX:+UseZGC -m com.whitewoodcity.xtrike/com.whitewoodcity.xtrike.Main-->
                    <jlinkImageName>Game</jlinkImageName>
                    <jlinkZipName>Xtrike</jlinkZipName>
                    <mainClass>${main.class}</mainClass>
                    <options>
                        <option>-XX:+UseZGC</option>
                    </options>
                </configuration>
            </plugin>

            <plugin>
                <groupId>com.gluonhq</groupId>
                <artifactId>gluonfx-maven-plugin</artifactId>
                <version>${gluonfx.plugin.version}</version>
                <configuration>
                    <target>${gluonfx.target}</target>
                    <mainClass>${main.class}</mainClass>
                    <nativeImageArgs>-Dfile.encoding=UTF-8</nativeImageArgs>
                </configuration>
            </plugin>
        </plugins>
    </build>

    <profiles>
        <profile>
            <id>desktop</id>
            <activation>
                <activeByDefault>true</activeByDefault>
            </activation>
            <properties>
                <gluonfx.target>host</gluonfx.target>
            </properties>
            <dependencies>
                <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>display</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>lifecycle</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
                <dependency>
                    <groupId>com.gluonhq.attach</groupId>
                    <artifactId>storage</artifactId>
                    <version>${attach.version}</version>
                    <classifier>desktop</classifier>
                    <scope>runtime</scope>
                </dependency>
            </dependencies>
        </profile>
        <profile>
            <id>android</id>
            <properties>
                <gluonfx.target>android</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>ios</id>
            <properties>
                <gluonfx.target>ios</gluonfx.target>
            </properties>
        </profile>
        <profile>
            <id>pi</id>
            <properties>
                <gluonfx.target>linux-aarch64</gluonfx.target>
            </properties>
        </profile>
    </profiles>

    <repositories>
        <repository>
            <id>oss.sonatype.org-snapshot</id>
            <url>https://oss.sonatype.org/content/repositories/snapshots</url>
        </repository>
    </repositories>
</project>